# ritematica

./: .gitignore  Cargo.toml  test.litematic
src/: block.rs  error.rs  file.rs  lib.rs  parsing.rs  region.rs  resource_location.rs  structure.rs
